--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,21 @@ android {
         targetCompatibility = 1.8
     }
 
+    flavorDimensions "version"
+
+    productFlavors {
+        dev {
+            dimension "version"
+            resValue "string", "app_name", "FightCovid Dev"
+            versionNameSuffix "-dev"
+            applicationIdSuffix ".dev"
+        }
+        production {
+            dimension "version"
+            resValue "string", "app_name", "FightCovid"
+        }
+    }
+
     kotlinOptions {
         jvmTarget = "1.8"
     }
