--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,26 +11,6 @@ jobs:
     environment:
       JVM_OPTS: -Xmx2048m
       GRADLE_OPTS: -Xmx1536m -XX:+HeapDumpOnOutOfMemoryError -Dorg.gradle.caching=true -Dorg.gradle.configureondemand=true -Dkotlin.compiler.execution.strategy=in-process -Dkotlin.incremental=false
-    gems_key: &gems_key
-                gems-{{ checksum "Gemfile.lock" }}
-    restore_gems_cache: &restore_gems_cache
-      restore_cache:
-        key: *gems_key
-    save_gems_cache: &save_gems_cache
-      save_cache:
-        key: *gems_key
-        paths:
-          - vendor/bundle
-    bundler_install: &bundler_install
-      run:
-        name: install bundler
-        command: |
-          gem update --system
-          gem install bundler
-    ruby_dependencies: &ruby_dependencies
-      run:
-        name: Download Ruby Dependencies
-        command: bundle check || bundle install --path vendor/bundle
     steps:
       - checkout
       - restore_cache:
@@ -56,12 +36,25 @@ jobs:
       _JAVA_OPTIONS: "-Xms512m -Xmx1024m"
       GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
       FASTLANE_LANE: distribute
+      gems-{{ checksum "Gemfile.lock" }}
     steps:
       - checkout
-      - *bundler_install
-      - *restore_gems_cache
-      - *ruby_dependencies
-      - *save_gems_cache
+      - restore_cache:
+          key: gems-{{ checksum "Gemfile.lock" }}
+      - run:
+        name: install bundler
+        command: |
+          gem update --system
+          gem install bundler
+      - restore_cache:
+          key: gems-{{ checksum "Gemfile.lock" }}
+      - run:
+        name: Download Ruby Dependencies
+        command: bundle check || bundle install --path vendor/bundle
+      - save_cache:
+        key: gems-{{ checksum "Gemfile.lock" }}
+        paths:
+          - vendor/bundle
       - run:
           name: Install firebase
           command: curl -sL firebase.tools | bash
