--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.google.fightcorona"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "0.0.1"
+        versionCode 2
+        versionName "0.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -104,5 +104,8 @@ dependencies {
 
     //Floating menu
     implementation 'com.github.clans:fab:1.6.4'
+
+    //Sentry
+    implementation 'io.sentry:sentry-android:1.7.23'
 
 }
