--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,9 @@ dependencies {
     //Sentry
     implementation 'io.sentry:sentry-android:1.7.23'
 
+    //Firebase login
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
 }
