--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.google.fightcorona"
+        applicationId "com.fightcovid"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 6
@@ -42,7 +42,7 @@ android {
             resValue "string", "app_name", "FightCovid Dev"
             versionNameSuffix "-dev"
             applicationIdSuffix ".dev"
-            buildConfigField 'String', 'BASE_URL', '"https://vino.usluge.org/"'
+            buildConfigField 'String', 'BASE_URL', '"https://vinomond.usluge.org/"'
         }
         production {
             dimension "version"
