--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,17 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="com.fightcorona.CoronaApplication"
+        android:name="com.fightcovid.CoronaApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.fightcorona.main.MainActivity" >
+        <activity android:name="com.fightcovid.main.MainActivity" >
 
         </activity>
-        <activity android:name="com.fightcorona.signin.SignInActivity">
+        <activity android:name="com.fightcovid.signin.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
