--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url "https://maven.google.com" }
     }
