--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: echo $RELEASE_KEYSTORE_BASE64 | base64 -d > fightcoviddev.jks
       - run:
           name: Create keystore.properties
-          command: printf 'debugKeyAlias=%s\ndebugKeyPassword=%s\ndebugKeyStore=%s\ndebugStorePassword=%s' $aleksamarkoni $nikadatinecureci $fightcoviddev.jks $Marinaje1! > keystore.properties
+          command: printf 'releaseKeyAlias=%s\nreleaseKeyPassword=%s\nreleaseKeyStore=%s\ndebugStorePassword=%s' $aleksamarkoni $nikadatinecureci $fightcoviddev.jks $Marinaje1! > keystore.properties
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
