--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "mobile/build.gradle" }}
       - run:
           name: assembleDev
-          command: ./gradlew assembleDev
+          command: ./gradlew assembleDevRelease
       - store_artifacts:
           path: mobile/build/outputs/apk
           destination: apks
