--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,13 +39,13 @@ jobs:
     decode_android_key: &decode_android_key
       run:
         name: Decode Android key store
-        command: echo $KEYSTORE | base64 --decode > fightcoviddev.jks
+        command: echo $RELEASE_KEYSTORE_BASE64 | base64 -d > fightcoviddev.jks
     steps:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "mobile/build.gradle" }}
-      - *create_keystore_properties
       - *decode_android_key
+      - *create_keystore_properties
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
