--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,4 +134,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //Threeten
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.3'
+
 }
