--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.fightcovid"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 9
-        versionName "0.0.9"
+        versionCode 10
+        versionName "0.0.10"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -55,7 +55,7 @@ android {
             resValue "string", "app_name", "FightCovid Dev"
             versionNameSuffix "-dev"
             applicationIdSuffix ".dev"
-            buildConfigField 'String', 'BASE_URL', '"https://vino.usluge.org/"'
+            buildConfigField 'String', 'BASE_URL', '"https://vinomond.usluge.org/"'
         }
         production {
             dimension "version"
